hphp/test/slow/lang/redefine_function.php.expectf
Fatal error: Cannot redeclare foo() (previously declared in %s/test/slow/lang/redefine_function.php:5) in %s/test/slow/lang/redefine_function.php on line 9